--- a/index.html
+++ b/index.html
@@ -58,14 +58,17 @@
     <img src="images/illustration-phones.svg" alt="mobile editor" height="350">
   </div>
   <div class="more-details-section">
-    <h3>Free, open, simple</h3>
-    <p> Blogr is a free and open source application backed by a large community of helpful developers. It supports
-      features such as code syntax highlighting, RSS feeds, social media integration, third-party commenting tools,
-      and works seamlessly with Google Analytics. The architecture is clean and is relatively easy to learn.</p>
-    <h3>Powerful tooling</h3>
-    <p> Batteries included. We built a simple and straightforward CLI tool that makes customization and deployment a
-      breeze, but
-      capable of producing even the most complicated sites.</p>
+    <div class="more-details-content">
+      <h3>Free, open, simple</h3>
+      <p> Blogr is a free and open source application backed by a large community of helpful developers. It supports
+        features such as code syntax highlighting, RSS feeds, social media integration, third-party commenting tools,
+        and works seamlessly with Google Analytics. The architecture is clean and is relatively easy to learn.</p>
+      <h3>Powerful tooling</h3>
+      <p> Batteries included. We built a simple and straightforward CLI tool that makes customization and deployment a
+        breeze, but
+        capable of producing even the most complicated sites.</p>
+    </div>
+    
     <img src="images/illustration-laptop-desktop.svg" alt="laptop illustration" height="300">
   </div>
   <div class="footer-section">
