added dropdowns on hover

--- a/index.html
+++ b/index.html
@@ -20,9 +20,31 @@
     <h2>Blogr</h2>
     <nav>
       <ul class="other-options">
-        <li>Product &nbsp;</li>
-        <li>Company &nbsp;</li>
-        <li>Connect &nbsp;</li>
+        <li class="dropdown">Product
+          <div class="dropdown-content">
+            <a href="#">Overview</a>
+            <a href="#">Pricing</a>
+            <a href="#">Marketplace</a>
+            <a href="#">Features</a>
+            <a href="#">Integrations</a>
+          </div>
+        </li>
+        
+        <li class="dropdown">Company
+          <div class="dropdown-content">
+            <a href="#">About</a>
+            <a href="#">Team</a>
+            <a href="#">Blog</a>
+            <a href="#">Careers</a>
+          </div>
+        </li>
+        <li class="dropdown">Connect
+          <div class="dropdown-content">
+            <a href="#">Contact</a>
+            <a href="#">Newsletter</a>
+            <a href="#">LinkedIn</a>
+          </div>
+        </li>
 
         <li class="login-options">Login</li>
         <li class="login-options"><button>Sign Up</button>
